charts/esphome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome-tunnel
spec:
  selector:
    app.kubernetes.io/controller: esphome
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  ports:
  - port: 6052
    protocol: TCP
    targetPort: 6052
