charts/esphome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
spec:
  hostnames:
  - esphome.g4v.dev
  parentRefs:
  - name: internal
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: esphome-tunnel
      port: 6052
    matches:
    - path:
        type: PathPrefix
        value: /
